# rust-ecosystem-experiencer

./: .taplo.toml  Cargo.toml  README.md  justfile
challenges/mini_redis_demo/: Cargo.toml
challenges/mini_redis_demo/examples/: client.rs
challenges/mini_redis_demo/src/: main.rs
cli_crates/bpaf_demo/: Cargo.toml  README.md
cli_crates/bpaf_demo/src/: main.rs
cli_crates/clap_demo/: Cargo.toml
cli_crates/clap_demo/examples/: clap_parse.rs  clap_typed_derive.rs
cli_crates/indicatif_demo/: Cargo.toml
cli_crates/indicatif_demo/examples/: hello_world.rs  multi_tree_ext.rs
cli_crates/indicatif_demo/src/: main.rs
cli_crates/log_demo/: Cargo.toml  README.md
cli_crates/miette_demo/: Cargo.toml
cli_crates/miette_demo/examples/: miette_basic.rs
crates/arc_swap_demo/: Cargo.toml
crates/arc_swap_demo/src/: main.rs
crates/clap_demo/: Cargo.toml
crates/clap_demo/examples/: clap_parse.rs  clap_typed_derive.rs
crates/log_demo/: Cargo.toml
crates/log_demo/examples/: basic.rs  log_basic.rs  log_tracing_span_event.rs  log_tracing_span_instrument.rs  tracing_span_event.rs  tracing_span_instrument.rs
crates/once_cell_demo/: Cargo.toml
crates/once_cell_demo/src/: main.rs
crates/rayon_demo/: Cargo.toml
crates/rayon_demo/src/: main.rs
std_crates/net_demo/: Cargo.toml
std_crates/net_demo/examples/: single_thread.rs
std_crates/net_demo/src/: lib.rs  main.rs
std_crates/net_demo/web/: 404.html
std_crates/vec_demo/: Cargo.toml
std_crates/vec_demo/src/: main.rs
web_crates/prost_demo/: Cargo.toml  build.rs
web_crates/prost_demo/protos/: proto_example.proto
web_crates/prost_demo/src/pb/: mod.rs  proto_example.rs
web_crates/reqwest_demo/: Cargo.toml
web_crates/reqwest_demo/examples/: sync.rs  with_tokio.rs
web_crates/s2n_quic_demo/: Cargo.toml
web_crates/s2n_quic_demo/examples/: client.rs  server.rs
web_crates/sqlx_demo/: .env.example  Cargo.toml  README.md  docker-compose.yml
web_crates/sqlx_demo/src/: main.rs
web_crates/warp_demo/: Cargo.toml  README.md  build.sh
web_crates/warp_demo/examples/: basic.rs  cookie.rs  header.rs  websocket_chat.rs
web_crates/warp_demo/examples/web/: index.html
web_crates/warp_demo/scripts/: bootstrap.sh  dev.sh
web_crates/warp_demo/src/: main.rs
