[package]
name = "indicatif_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console="0.15.7"
indicatif="0.17.6"
rand="0.8.5"
once_cell="1.18.0"
clap = { version = "3", features = ["color", "derive"] }
tokio = { version = "1", features = ["fs", "time", "rt"] }