[package]
edition = "2021"
name    = "indicatif_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap      = { version = "3", features = ["color", "derive"] }
console   = "0.15.7"
indicatif = "0.17.6"
once_cell = "1.18.0"
rand      = "0.8.5"
tokio     = { version = "1", features = ["fs", "time", "rt"] }
