[package]
edition = "2021"
name    = "s2n_quic_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
s2n-quic = { version = "1.34.0", default-features = false, features = [
  "provider-address-token-default",
  "provider-tls-rustls",
] }
s2n-quic-rustls = "0.34.0"
"tokio" = { version = "1", features = ["full"] }
