[package]
edition = "2021"
name    = "sqlx_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = "1.0"
async-trait = "0.1.41"
dotenvy     = "0.15.0"
futures     = "0.3"
mockall     = "0.11"
sqlx        = { version = "0.7.2", features = ["postgres", "runtime-tokio-native-tls"] }
structopt   = "0.3"
tokio       = { version = "1.20.0", features = ["rt", "macros"] }
