[package]
name = "warp_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1",features=["full"]}
anyhow={version="1"}
warp="0.3.5"
log="0.4.20"
pretty_env_logger="0.5.0"

[dev-dependencies]
tokio-stream="0.1.14"
futures-util="0.3.28"