[package]
edition = "2021"
name    = "warp_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow            = { version = "1" }
log               = "0.4.20"
pretty_env_logger = "0.5.0"
tokio             = { version = "1", features = ["full"] }
warp              = "0.3.5"

[dev-dependencies]
futures-util = "0.3.28"
tokio-stream = "0.1.14"
